<resources>
    <string name="app_name" translatable="false">Halfway</string>
    <string name="login_text">Login</string>
    <string name="email">Enter Your Email</string>
    <string name="name">Enter Your Name</string>
    <string name="password">Enter Your Password</string>
    <string name="signup">Sign-Up</string>
    <string name="signup_msg">Don\'t Have an account? Sign up now</string>
    <string name="login_msg">Already registered? Login now</string>
    <string name="user_detail">User Detail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="my_account">My Account</string>
    <string name="save">save</string>
    <string name="get_current_location">Get Current location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="tab_restro">Restaurant</string>
    <string name="tab_cafe">Cafe</string>
    <string name="tab_amusement">Amusement Park</string>
    <string name="movie_theater">movie Theater</string>


    <!-- Error strings -->
    <string name="instruction_where_description">Where do you want to be reminded?</string>
    <string name="instruction_where_subtitle_description">Drag the map to set the location</string>
    <string name="instruction_radius_description">Choose the radius</string>
    <string name="instruction_message_description">Enter the message</string>
    <string name="continue_description">Continue</string>
    <string name="error_required">Required</string>
    <string name="message_hint">We arrived! :]</string>
    <string name="radius_description">%1$s meters</string>

    <string name="reminder_removal_alert">Remove reminder?</string>
    <string name="reminder_removal_alert_positive">OK</string>
    <string name="reminder_removal_alert_negative">Cancel</string>

    <string name="reminder_added_success">Reminder added!</string>
    <string name="reminder_removed_success">Reminder removed!</string>

    <string name="marker_content_description">Marker</string>

    <string name="geofence_unknown_error">
    Unknown error: the Geofence service is not available now.
  </string>
    <string name="geofence_not_available">
    Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.
  </string>
    <string name="geofence_too_many_geofences">
    Your app has registered too many geofences.
  </string>
    <string name="geofence_too_many_pending_intents">
    You have provided too many PendingIntents to the addGeofences() call.
  </string>

    <string name="title_map">Map</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Password_not_match">Password and confirm password does not match</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="reg_success">Register successfully</string>
    <string name="faild_reg">Failed to Register</string>
    <string name="successful">Successful</string>
    <string name="login_success">Login successfully!</string>
    <string name="login_failed">Failed to Login</string>
    <string name="warning">Warning</string>
    <string name="enter_email">Please enter the email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_password">Please enter the password</string>
    <string name="user_credentials">Please enter valid user credentials..</string>
    <string name="password_same">Please check both having same password..</string>
    <string name="enter_name">Please enter your  name</string>
    <string name="open_now">Open Now</string>
    <string name="hafway_notif">\"You reach Half way to your friend \"</string>
    <string name="location">location</string>
    <string name="my_location">My Location</string>
    <string name="no_Items">No Items</string>
    <string name="Failed">Failed</string>
    <string name="delete_complete">Delete Complete</string>
    <string name="friend">Friend</string>
    <string name="user_location">User Locations</string>
    <string name="halfway_point_added">Halfway Point Added</string>
    <string name="failed">Failed</string>
    <string name="login">Login</string>
    <string name="set_halfway_point">Set Halfway Point</string>
    <string name="places">Places</string>
    <string name="friend_location">Friend Location</string>
    <string name="no_item">No Item</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="repeat_the_password">Repeat The Password</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="logout_success">You have successfully logged out</string>
    <string name="logout">logout</string>
    <string name="delete_account">DELETE ACCOUNT!!</string>
    <string name="email_update">Update Email Successfully</string>
    <string name="email_not_update">Update Email not Successfully</string>
    <string name="username_update">User Name updated Successfully</string>
    <string name="username_not_update">User Name Update not Successfully</string>
    <string name="user_not_exist">User Not Exist</string>


</resources>