<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".screens.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input"
        android:clipToOutline="true"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/etLastName"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input"
        android:clipToOutline="true"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        tools:ignore="MissingConstraints" />


    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/input"
        android:clipToOutline="true"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        tools:ignore="MissingConstraints" />



    <EditText
        android:id="@+id/etRegisterPass"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/input"
        android:clipToOutline="true"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisterEmail"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etRegisterCnfPass"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input"
        android:clipToOutline="true"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/repeat_the_password"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/register" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_msg" />

</LinearLayout>