<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.tuwaiq.halfway.screens.fragments.UserMapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.tuwaiq.halfway.screens.fragments.PlacesFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tuwaiq.halfway.screens.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>